[package]
name = "fil-filepath"
version = "0.1.1"
authors = ["Tom Schuster <evilpies@gmail.com>", "nemo <nemo@protocol.ai>"]
categories = ["filesystem"]
keywords = ["path", "file"]
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/evilpie/filepath"
description = "Get the filesystem path of a file."

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "fileapi"] }